--- a/DiaryApp/Views/Base.lproj/Main.storyboard
+++ b/DiaryApp/Views/Base.lproj/Main.storyboard
@@ -177,16 +177,23 @@
                                                 <action selector="cancelPressed:" destination="UZQ-tx-YaX" id="RoA-Lh-dq2"/>
                                             </connections>
                                         </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" title="Save" id="atO-gZ-nYq">
-                                            <connections>
-                                                <action selector="savePressed:" destination="UZQ-tx-YaX" id="vsV-dU-k2X"/>
-                                            </connections>
-                                        </barButtonItem>
+                                        <rightBarButtonItems>
+                                            <barButtonItem title="Save" id="atO-gZ-nYq">
+                                                <connections>
+                                                    <action selector="savePressed:" destination="UZQ-tx-YaX" id="vsV-dU-k2X"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem systemItem="trash" id="jt5-tV-tjm">
+                                                <connections>
+                                                    <action selector="trashPressed:" destination="UZQ-tx-YaX" id="Ewu-jb-dYY"/>
+                                                </connections>
+                                            </barButtonItem>
+                                        </rightBarButtonItems>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UGd-3H-wsr">
-                                <rect key="frame" x="167" y="73" width="80.5" height="41"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.90000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="UGd-3H-wsr">
+                                <rect key="frame" x="16" y="73" width="382" height="41"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="41" id="aTe-DB-jqc"/>
                                 </constraints>
@@ -347,9 +354,11 @@
                             <constraint firstItem="UBI-lL-zVu" firstAttribute="centerY" secondItem="1UX-hN-6N0" secondAttribute="centerY" id="ibe-jp-KiE"/>
                             <constraint firstItem="21r-WS-gJv" firstAttribute="trailing" secondItem="Y6M-Tu-Ine" secondAttribute="trailing" id="ivo-eh-uks"/>
                             <constraint firstItem="1UX-hN-6N0" firstAttribute="top" secondItem="UNL-tA-z9J" secondAttribute="bottom" constant="16" id="kWZ-5g-iFK"/>
+                            <constraint firstItem="UGd-3H-wsr" firstAttribute="leading" secondItem="DGP-sy-FEZ" secondAttribute="leading" constant="16" id="m8B-S1-PIN"/>
                             <constraint firstItem="xeD-C9-ArY" firstAttribute="trailing" secondItem="DGP-sy-FEZ" secondAttribute="trailing" id="oiw-ey-AQk"/>
                             <constraint firstItem="xeD-C9-ArY" firstAttribute="leading" secondItem="DGP-sy-FEZ" secondAttribute="leading" id="rIw-V8-U2D"/>
                             <constraint firstItem="Y6M-Tu-Ine" firstAttribute="centerX" secondItem="UGd-3H-wsr" secondAttribute="centerX" id="sdA-QD-Vqb"/>
+                            <constraint firstItem="DGP-sy-FEZ" firstAttribute="trailing" secondItem="UGd-3H-wsr" secondAttribute="trailing" constant="16" id="xZc-5s-sFp"/>
                             <constraint firstItem="Oat-qX-Obb" firstAttribute="centerX" secondItem="8N8-CL-MVd" secondAttribute="centerX" id="yMB-Fx-nYs"/>
                             <constraint firstItem="DGP-sy-FEZ" firstAttribute="trailing" secondItem="1UX-hN-6N0" secondAttribute="trailing" constant="16" id="yf1-Ug-kwd"/>
                             <constraint firstItem="DGP-sy-FEZ" firstAttribute="trailing" secondItem="UBI-lL-zVu" secondAttribute="trailing" constant="16" id="zaD-s9-nYv"/>
@@ -363,10 +372,13 @@
                         <outlet property="dateLabel" destination="UGd-3H-wsr" id="1jq-zX-CUF"/>
                         <outlet property="imageButton" destination="Y6M-Tu-Ine" id="bRN-YB-tDY"/>
                         <outlet property="locationLabel" destination="UBI-lL-zVu" id="3bk-cZ-Jzp"/>
+                        <outlet property="navigationBar" destination="xeD-C9-ArY" id="dPg-cP-8s0"/>
+                        <outlet property="navigationBarTitle" destination="L5T-52-xMu" id="W2K-KN-Npb"/>
                         <outlet property="navigationSaveButton" destination="atO-gZ-nYq" id="wRY-Ap-6Dk"/>
                         <outlet property="saveButton" destination="cvk-kC-4tT" id="SbI-u8-mAv"/>
                         <outlet property="statusImage" destination="21r-WS-gJv" id="gcm-ys-wjL"/>
                         <outlet property="textView" destination="ZhE-ag-ptQ" id="yJI-bk-cfG"/>
+                        <outlet property="trashItem" destination="jt5-tV-tjm" id="hxz-9M-IIc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="biZ-Mi-jfQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
